<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_activity_background_green"
    tools:context=".login.LoginActivity">

<Space
    android:id="@+id/spacer"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="60dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/main_activity_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_name_inputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_activity_age_inputlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:srcCompat="@drawable/imagen_registro" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_activity_camera_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:drawableBottom="@drawable/baseline_add_a_photo_white_24dp"
        android:rotationY="180"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_profile_pic"
        app:layout_constraintEnd_toEndOf="@id/main_activity_profile_pic"
        app:layout_constraintStart_toStartOf="@+id/main_activity_profile_pic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_activity_name_inputlayout"
        style="@style/main_activity_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_activity_name_inputtext_hint"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_password_inputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_password_inputlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_profile_pic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_activity_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_activity_password_inputlayout"
        style="@style/main_activity_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_activity_password_inputtext_hint"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_age_inputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_age_inputlayout"
        app:layout_constraintStart_toEndOf="@+id/main_activity_name_inputlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_name_inputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_activity_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_activity_age_inputlayout"
        style="@style/main_activity_autocomplete_input"
        android:hint="@string/register_activity_age_inputtext_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_profile_pic"
        app:layout_constraintStart_toEndOf="@+id/main_activity_password_inputlayout"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_password_inputlayout"
        android:layout_marginBottom="25dp"
        >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/register_fragment_age_autocomplete"
            style="@style/autocomplete_text_view"
            android:completionThreshold="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_activity_button"
        android:text="@string/register_activity_button"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_privacy_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@drawable/main_activity_button"
        style="@style/buttonStyle" />

    <TextView
        android:id="@+id/main_activity_privacy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="48dp"
        android:text="@string/register_activity_privacidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_conditions_tv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_activity_conditions_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/register_activity_condiciones"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_activity_privacy_tv"
        app:layout_constraintTop_toTopOf="@+id/main_activity_privacy_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>